<resources>
     <!--Main Screen Items-->
    <!--These are used throughout the app -->
    <string name="appName">Ace Restaurant</string>
    <string name="title">Welcome to Ace Restaurant</string>
    <string name="goDrink">Drink Mixer</string>
    <string name="goReservation">Reservations</string>

    <!--Reservation Screen Items-->
    <string name="thankYou">Thank you for coming to see us! Please fill out the following to help us prepare for your visit.</string>
    <string name="nameBox">Name</string>
    <string name="emailBox">Email</string>
    <string name="phoneBox">Phone</string>
    <string name="timeSpinner">Time</string>
    <string name="resButton">Date of Visit</string>
    <string name="timeButton">Time of Visit</string>
    <string name="requestsText">Enter any special requests here</string>
    <string name="visitTime">Time of Visit</string>
    <string name="visitDate">Date of Visit</string>
    <string name="dateSelect">Select Date</string>

   <!-- Reservation Guest Array -->
    <string-array name="numberOfGuests">
        <item>How many guests?</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <!-- Drink Mixer Screen Items  -->
    <string name="mixerChoice">Select a Mixer</string>
    <string name="liquorChoice">Choose a Liquor</string>
    <string name="garnishChoice">Would you like to  add a garnish?</string>
    <string name="drinkName"> Your Drink</string>
    <string name="goToReservation">Go to reservation layout</string>
    <string name="titleView">Welcome to Ace Restaurant</string>
    <string name="confirmButton">Confirm</string>
    <string name="yourDrinkTitleView">Your Drink</string>


    <string-array name="Liquors">
        <item><b>Vodka</b></item>
        <item><b>Tequila</b></item>
        <item><b>Rum</b></item>
        <item><b>Gin</b></item>
    </string-array>
    <string-array name="Mixers">
        <item><b>Cola</b></item>
        <item><b>Tonic Water</b></item>
        <item><b>Cranberry Juice</b></item>
        <item><b>Orange Juice</b></item>
        <item><b>Sour Mix</b></item>
    </string-array>
    <string-array name="Garnishes">
        <item>None</item>
        <item>Salt Rim</item>
        <item>Sugar Rim</item>
        <item>Lemon</item>
        <item>Lime</item>
        <item>Cherry</item>
    </string-array>

<!--Vodka Drinks-->
    <string name="screwdriver"><b>Screwdriver</b></string>
    <string name="capeCod"><b>Cape Cod</b></string>
    <string name="vodkaTonic">Vodka Tonic</string>
    <string name="vodkaCollins">Vodka Collins</string>
<!--Tequila Drinks-->
    <string name="sunrise"><b>Tequila Sunrise</b></string>
    <string name="margarita"><b>Margarita</b></string>
    <string name="tequilaBatanga">Tequila Batanga</string>
    <string name="tequilaTonic">Tequila and Tonic</string>
    <string name="cranberryMargarita">Cranberry Margarita</string>
<!--Rum Drinks-->
    <string name="rumAndCoke"><b>Rum and Coke</b></string>
    <string name="rumSour">Rum Sour</string>
    <string name="rumSunset">Rum Sunset</string>
    <string name="cranberryZombie">Cranberry Zombie</string>
<!--Gin Drinks-->
    <string name="ginTonic">Gin and Tonic</string>
    <string name="cranberryGin">Cranberry Gin</string>
    <string name="orangeBlossom">Orange Blossom</string>
    <string name="ginSour">Gin Sour</string>
<!--Placeholders-->
    <string name="createDrink">Create your Drink</string>
    <string name="drinkHere"><b>See your drink here</b></string>
    <string name="yourDrink"> This is not a combination we recommend</string>
</resources>