<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha=".80"
    android:background="@drawable/backgrounddrink"
    tools:context=".MainActivity">
<!--Button for reservation screen-->
    <Button
        android:id="@+id/resButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/buttonColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/goToReservation"
        android:text="@string/goReservation"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drinkButton" />
<!--Button for drink mixer-->
    <Button
        android:id="@+id/drinkButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/buttonColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/goDrink"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@+id/resButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleView"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

</androidx.constraintlayout.widget.ConstraintLayout>